# MobilEase

./: .gitignore  .project  K548-ESP.prj  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  requirements.txt  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-delightful-beach-0027ec603.yml  azure-static-web-apps-gray-coast-0457ace03.yml  azure-static-web-apps-white-bush-0b248ec03.yml  main_esp-148.yml  main_esp548backend.yml
Object Repository/Page_Employee Sustainability Page/: a_Back to Register.rs  a_Congratulations  Youve unlocked 1 Day Off_5cf97c.rs  a_Explore.rs  a_Footprint Calculator.rs  a_My Profile.rs  a_Rewards.rs  a_Schedule.rs  a_View Details.rs  body_You need to enable JavaScript to run t_c4decf.rs  button_Create Post.rs  button_Decline.rs  button_Fast Mode Quick Assessment (18 questions).rs  (+113 more)
Test Cases/: Calculator_Component.tc  Explore_Component.tc  Main_Page.tc  Post_Component.tc  Reward_Badges.tc  Schedule_Component.tc  User_Login.tc  User_SignIn.tc
Test Suites/: Calculator_Component.ts  Explore_Component.ts  Main_Page.ts  Post_Component.ts  Schedule_Component.ts  User Profile.ts
alembic/: env.py
backend/: Dockerfile  __init__.py  booking_confirmation.html  calculator.py  company_email_template.html  crud.py  database.py  email_template.html  main.py  mobilease-487511-1741b81e45c8.json  models.py  pyproject.toml  questions.py  redis_client.py  requirements.txt  schemas.py  send_company_email.py  send_email.py  test_docai.py
frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
(+162 files in other folders)
