[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "axios>=0.4.0",
    "bcrypt>=4.3.0",
    "cryptography>=44.0.3",
    "email-validator>=2.2.0",
    "fastapi~=0.112.2",
    "passlib~=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic~=2.8.2",
    "python-dotenv~=0.10.5",
    "python-jose~=3.3.0",
    "python-multipart>=0.0.20",
    "qrcode==8.1",
    "sendgrid~=6.11.0",
    "sqlalchemy~=2.0.33",
    "uvicorn>=0.34.2",
]
